--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Jessica
 subtitle:
 description:
-author: John Doe
+author: Jessica
 language:
 timezone:
 
